Address warnings due to update of dependencies
Change-Id: I691903f37e42aa33f5cc51023d414353e9169ef2
Signed-off-by: Olivier Constant <olivier.constant@thalesgroup.com>